fixed z-index, so modal behaves

--- a/src/components/ModalEditClient/style.scss
+++ b/src/components/ModalEditClient/style.scss
@@ -11,6 +11,7 @@
     justify-content: center;
     overflow: auto;
     animation: apear 0.5s;
+    z-index: 1;
 
     button {
       margin-top: 30px;
